bad/var_decl_init_shadows_same_decl.example_compiler_output
ERROR
[1mbad/var_decl_init_shadows_same_decl.lat:3:14: [1;31merror: [0;1mcannot redefine variable `x`[m
	int x = 42, x = 13;
	            [1;32m^[m
[1mbad/var_decl_init_shadows_same_decl.lat:3:6: [1;34mnote: [0;1mprevious definition is here[m
	int x = 42, x = 13;
	    [1;32m^[m
